бизнес-логика и описание
